Hover fix and z-index in Subscription-RA-bg remove

--- a/src/components/css/SubscriptionRA.css
+++ b/src/components/css/SubscriptionRA.css
@@ -3,7 +3,6 @@
     background-repeat: no-repeat;
     background-position: 40vw 3vh;
     background-size: 55rem;
-    z-index: 40;
 }
 
 .subscription-RA-img {
